Enables testing with JDK 17